[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ansible-host"
version = "0.1.0a0"
description = "A thin Python wrapper over Ansible's executor: typed AnsibleHost / AnsibleHosts classes that let you run Ansible modules from Python without pytest-ansible or ansible-runner."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Xin Wang", email = "wangxin.wang@gmail.com" },
]
keywords = [
    "ansible",
    "automation",
    "network-automation",
    "testing",
    "infrastructure",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "ansible-core>=2.16,<2.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/wangxin/ansible-host"
Source = "https://github.com/wangxin/ansible-host"
Issues = "https://github.com/wangxin/ansible-host/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ansible_host"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ansible_host",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
